--- a/app/index.html
+++ b/app/index.html
@@ -2002,7 +2002,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-1">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3966-3237-4466-b661-613837396431/giphy.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -2011,7 +2013,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-2">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3539-6165-4237-a661-323066613663/giphy.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Bazadance
@@ -2022,7 +2026,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-3">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3338-3033-4435-b562-383034366531/giphy_2.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Клининговая компания "Просто Чисто"
@@ -2031,7 +2037,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-4">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3035-3338-4561-b333-346265336165/giphy.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Клининговая компания "Альфа Клининг"
@@ -2042,7 +2050,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-5">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3332-6135-4330-b030-316663336630/giphy_3.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Клиника "Неоэстетика"
@@ -2051,7 +2061,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-6">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3865-6230-4239-b264-393031346366/giphy.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Компания "Мой Дом"
@@ -2064,7 +2076,9 @@
               <div class="reviews__item btn-video" data-path="review-popup-7">
                 <div class="reviews__item-img">
                   <img src="https://static.tildacdn.com/tild3830-3166-4136-a566-646364306164/ezgif-7.gif" alt="" class="reviews__img">
-                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
+                  <svg class="youtube-icon">
+                    <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                  </svg>
                 </div>
                 <p class="reviews__item-title">
                   Бизнес клуб Level Up
@@ -2079,6 +2093,19 @@
             </div>
             <div class="reviews__column">
               <div class="reviews__item m-none">
+                <div class="reviews__item btn-video" data-path="review-popup-7">
+                  <div class="reviews__item-img">
+                    <img src="img/reviews/2.gif" alt="" class="reviews__img">
+                    <svg class="youtube-icon">
+                      <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                    </svg>
+                  </div>
+                  <p class="reviews__item-title h-none">
+                    Интернет-магазин "Спальные системы"
+                  </p>
+                </div>
+              </div>
+              <div class="reviews__item m-none">
                 <div class="reviews__item-img h-none m-none"></div>
                 <p class="reviews__item-title h-none">
                   
@@ -2087,8 +2114,20 @@
             </div>
             <div class="reviews__column">
               <div class="reviews__item m-none">
-                <div class="reviews__item-img h-none m-none">
+                <div class="reviews__item btn-video" data-path="review-popup-7">
+                  <div class="reviews__item-img">
+                    <img src="img/reviews/1.gif" alt="" class="reviews__img">
+                    <svg class="youtube-icon">
+                      <use xlink:href="img/sprite/sprite.svg#youtube"></use>
+                    </svg>
+                  </div>
+                  <p class="reviews__item-title h-none">
+                    Интернет-магазин "Спальные системы"
+                  </p>
                 </div>
+              </div>
+              <div class="reviews__item m-none">
+                <div class="reviews__item-img h-none m-none"></div>
                 <p class="reviews__item-title h-none">
                   
                 </p>
@@ -2738,6 +2777,16 @@
       <div class="modal-overlay-video">
         <div class="modal__video" data-target="review-popup-7">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/fTvTCP9-Z98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="modal-overlay-video">
+        <div class="modal__video" data-target="review-popup-8">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/YVqfLYE8Jcs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="modal-overlay-video">
+        <div class="modal__video" data-target="review-popup-9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-Zi4ecAup60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
