--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="team__member-sertificats btn-sertificat" data-path="sertificats-2">
                   <div class="team__member-sertificat">
-                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                    <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
                   </div>
                   <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
@@ -2209,15 +2209,15 @@
           </div>
           <div class="clients__item">
             <img src="img/clients/2.svg" alt="" class="clients__logo bassein">
-            <img src="img/clients/2.svg" alt="" class="clients__logo_hover bassein">
+            <img src="img/clients/2-hover.png" alt="" class="clients__logo_hover bassein">
           </div>
           <div class="clients__item">
             <img src="img/clients/3.svg" alt="" class="clients__logo tbs">
-            <img src="img/clients/3.svg" alt="" class="clients__logo_hover tbs">
+            <img src="img/clients/3-hover.svg" alt="" class="clients__logo_hover tbs">
           </div>
           <div class="clients__item">
             <img src="img/clients/4.svg" alt="" class="clients__logo logo-pool">
-            <img src="img/clients/4.svg" alt="" class="clients__logo_hover logo-pool">
+            <img src="img/clients/4-hover.png" alt="" class="clients__logo_hover logo-pool">
           </div>
           <div class="clients__item">
             <img src="img/clients/5.svg" alt="" class="clients__logo metizoff">
@@ -2228,20 +2228,20 @@
             <img src="img/clients/6-hover.svg" alt="" class="clients__logo_hover flexalen">
           </div>
           <div class="clients__item">
-            <img src="img/clients/7.svg" alt="" class="clients__logo bazadance">
-            <img src="img/clients/7-hover.svg" alt="" class="clients__logo_hover bazadance">
+            <img src="img/clients/7.png" alt="" class="clients__logo bazadance">
+            <img src="img/clients/7-hover.jpg" alt="" class="clients__logo_hover bazadance">
           </div>
           <div class="clients__item">
             <img src="img/clients/8.svg" alt="" class="clients__logo more">
-            <img src="img/clients/8.svg" alt="" class="clients__logo_hover more">
+            <img src="img/clients/8-hover.svg" alt="" class="clients__logo_hover more">
           </div>
           <div class="clients__item">
             <img src="img/clients/9.svg" alt="" class="clients__logo odevai">
-            <img src="img/clients/9.svg" alt="" class="clients__logo_hover odevai">
+            <img src="img/clients/9-hover.svg" alt="" class="clients__logo_hover odevai">
           </div>
           <div class="clients__item">
             <img src="img/clients/10.svg" alt="" class="clients__logo mpt">
-            <img src="img/clients/10.svg" alt="" class="clients__logo_hover mpt">
+            <img src="img/clients/10-hover.svg" alt="" class="clients__logo_hover mpt">
           </div>
           <div class="clients__item">
             <img src="img/clients/11.svg" alt="" class="clients__logo metrology">
@@ -2253,7 +2253,7 @@
           </div>
           <div class="clients__item">
             <img src="img/clients/13.svg" alt="" class="clients__logo moi-dom">
-            <img src="img/clients/13.svg" alt="" class="clients__logo_hover moi-dom">
+            <img src="img/clients/13-hover.svg" alt="" class="clients__logo_hover moi-dom">
           </div>
           <div class="clients__item">
             <img src="img/clients/14.svg" alt="" class="clients__logo formula">
