--- a/app/index.html
+++ b/app/index.html
@@ -364,7 +364,7 @@
               <img src="img/team/team-6/1.jpg" alt="">
             </div>
             <div class="team__slider-img">
-              <img src="img/team/team-6/1.jpg" alt="">
+              <img src="img/team/team-6/2.jpg" alt="">
             </div>
           </div>
           <button class="modal__team-close">
@@ -2040,7 +2040,14 @@
                 <span class="list-item__number">05</span>
                 <p class="list-item__text">Косметология</p>
               </div>
-              <span class="list-item__count">1 проект</span>
+              <span class="list-item__count">10 проектов</span>
+            </li>
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">06</span>
+                <p class="list-item__text">Клининг</p>
+              </div>
+              <span class="list-item__count">32 проекта</span>
             </li>
           </ul>
         </div>
@@ -2229,7 +2236,7 @@
           </div>
           <div class="clients__item">
             <img src="img/clients/7.png" alt="" class="clients__logo bazadance">
-            <img src="img/clients/7-hover.jpg" alt="" class="clients__logo_hover bazadance">
+            <img src="img/clients/7-hover-1.png" alt="" class="clients__logo_hover bazadance">
           </div>
           <div class="clients__item">
             <img src="img/clients/8.svg" alt="" class="clients__logo more">
@@ -2268,19 +2275,19 @@
           <div class="clients-slide">
             <div class="clients__item">
               <img src="img/clients/1.svg" alt="" class="clients__logo pilki">
-              <img src="img/clients/1.svg" alt="" class="clients__logo_hover pilki">
+              <img src="img/clients/1-hover.svg" alt="" class="clients__logo_hover pilki">
             </div>
             <div class="clients__item">
               <img src="img/clients/2.svg" alt="" class="clients__logo bassein">
-              <img src="img/clients/2.svg" alt="" class="clients__logo_hover bassein">
+              <img src="img/clients/2-hover.png" alt="" class="clients__logo_hover bassein">
             </div>
             <div class="clients__item">
               <img src="img/clients/3.svg" alt="" class="clients__logo tbs">
-              <img src="img/clients/3.svg" alt="" class="clients__logo_hover tbs">
+              <img src="img/clients/3-hover.svg" alt="" class="clients__logo_hover tbs">
             </div>
             <div class="clients__item">
               <img src="img/clients/4.svg" alt="" class="clients__logo logo-pool">
-              <img src="img/clients/4.svg" alt="" class="clients__logo_hover logo-pool">
+              <img src="img/clients/4-hover.png" alt="" class="clients__logo_hover logo-pool">
             </div>
           </div>
           <div class="clients-slide">
@@ -2294,21 +2301,21 @@
             </div>
             <div class="clients__item">
               <img src="img/clients/7.svg" alt="" class="clients__logo bazadance">
-              <img src="img/clients/7-hover.svg" alt="" class="clients__logo_hover bazadance">
+              <img src="img/clients/7-hover.ipg" alt="" class="clients__logo_hover bazadance">
             </div>
             <div class="clients__item">
               <img src="img/clients/8.svg" alt="" class="clients__logo more">
-              <img src="img/clients/8.svg" alt="" class="clients__logo_hover more">
+              <img src="img/clients/8-hover.svg" alt="" class="clients__logo_hover more">
             </div>
           </div>
           <div class="clients-slide">
             <div class="clients__item">
               <img src="img/clients/9.svg" alt="" class="clients__logo odevai">
-              <img src="img/clients/9.svg" alt="" class="clients__logo_hover odevai">
+              <img src="img/clients/9-hover.svg" alt="" class="clients__logo_hover odevai">
             </div>
             <div class="clients__item">
               <img src="img/clients/10.svg" alt="" class="clients__logo mpt">
-              <img src="img/clients/10.svg" alt="" class="clients__logo_hover mpt">
+              <img src="img/clients/10-hover.svg" alt="" class="clients__logo_hover mpt">
             </div>
             <div class="clients__item">
               <img src="img/clients/11.svg" alt="" class="clients__logo metrology">
@@ -2322,7 +2329,7 @@
           <div class="clients-slide">
             <div class="clients__item">
               <img src="img/clients/13.svg" alt="" class="clients__logo moi-dom">
-              <img src="img/clients/13.svg" alt="" class="clients__logo_hover moi-dom">
+              <img src="img/clients/13-hover.svg" alt="" class="clients__logo_hover moi-dom">
             </div>
             <div class="clients__item">
               <img src="img/clients/14.svg" alt="" class="clients__logo formula">
