--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,8 @@
               <a href="tel:79006566903" class="nav__contact nav__contact-mail">+7 900 656 69 03</a>
             </div>
             <div class="nav__contacts-row">
-              <a href="#" class="nav__contact nav__contact-telegram">в telegram</a>
-              <a href="#" class="nav__contact nav__contact-whatsapp">в whatsapp</a>
+              <a href="https://t.me/gleb_twain" class="nav__contact nav__contact-telegram">в telegram</a>
+              <a href="https://wa.me/89006566903" class="nav__contact nav__contact-whatsapp">в whatsapp</a>
             </div>
           </div>
         </div>
