--- a/app/index.html
+++ b/app/index.html
@@ -456,7 +456,7 @@
                     <div class="tab-body__info body-info d-flex">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1
+                          ПИLКИ
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
@@ -535,7 +535,7 @@
                     <div class="tab-body__info body-info">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1-2
+                          TBC
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
@@ -614,7 +614,7 @@
                     <div class="tab-body__info body-info">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1-3
+                          ТвойБассейн
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
@@ -693,7 +693,7 @@
                     <div class="tab-body__info body-info">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1-4
+                          Baza Dance Company
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
@@ -772,7 +772,7 @@
                     <div class="tab-body__info body-info">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1-5
+                          Аква Инжиниринг
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
@@ -851,7 +851,7 @@
                     <div class="tab-body__info body-info">
                       <div class="body-info__left">
                         <div class="body-info__left-title">
-                          Клининговая компания в Москве1-6
+                          Просто.Чисто
                         </div>
                         <div class="body-info__left-indicators">
                           <div class="indicator">
