--- a/app/index.html
+++ b/app/index.html
@@ -105,13 +105,14 @@
           </a>
           <div id="header__services" class="header__services">
             <div class="header__services-row">
-              <div class="header__service">Контекстная, таргетированная и медийная реклама</div>
-              <div class="header__service">Диджитал-стратегия</div>
-              <div class="header__service">SMM</div>
+              <div class="header__service btn-order" data-path="order-popup">Контекстная, таргетированная и медийная реклама</div>
+              <div class="row__inner">
+                <div class="header__service btn-order" data-path="order-popup">SMM</div>
+                <div class="header__service btn-order" data-path="order-popup">Контент</div>
+              </div>
             </div>
             <div class="header__services-row">
-              <div class="header__service">Контент</div>
-              <div class="header__service">Web-дизайн и разработка</div>
+              <div class="header__service btn-order" data-path="order-popup">Web-дизайн и разработка</div>
             </div>
           </div>
         </div>
